--- a/style.css
+++ b/style.css
@@ -65,8 +65,9 @@ main header {
 }
 
 main header #gameTitle {
+  text-align: center;
   color: #999;
-  padding: 1em 1em 0;
+  padding-top: 1em;
 }
 
 main header .action_btn {
@@ -89,6 +90,7 @@ main header .action_btn button {
 
 main header .action_btn button:disabled {
   opacity: 0.5;
+  cursor: not-allowed;
 }
 
 main header .action_btn button:not(:disabled):hover {
@@ -129,6 +131,7 @@ main #grid .cell {
 }
 
 main #grid .cell > div {
+  width: 100%;
   height: 100%;
   font-weight: bold;
   border-radius: inherit;
@@ -141,10 +144,10 @@ main #grid .cell > div {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+  -webkit-transition: -webkit-transform 0.25s ease;
+  transition: -webkit-transform 0.25s ease;
+  transition: transform 0.25s ease;
+  transition: transform 0.25s ease, -webkit-transform 0.25s ease;
 }
 
 main #grid .cell > div.color2 {
