--- a/style.scss
+++ b/style.scss
@@ -44,8 +44,9 @@ main {
 		align-items: stretch;
 
 		#gameTitle {
+			text-align: center;
 			color: #999;
-			padding: 1em 1em 0;
+			padding-top: 1em;
 		}
 
 		.action_btn {
@@ -60,6 +61,7 @@ main {
 
 				&:disabled {
 					opacity: 0.5;
+					cursor: not-allowed;
 				}
 
 				&:not(:disabled):hover {
@@ -97,13 +99,14 @@ main {
 			background-color: #444;
 
 			& > div {
+				width: 100%;
 				height: 100%;
 				font-weight: bold;
 				border-radius: inherit;
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				transition: transform 0.3s ease;
+				transition: transform 0.25s ease;
 
 				&.color2 {
 					background-color: hsl(0, 58%, 56%);
